--- a/package.json
+++ b/package.json
@@ -3,22 +3,29 @@
   "version": "1.0.0",
   "description": "",
   "main": "",
+  "repository": "git@github.com:lmammino/judo-heroes.git",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node_modules/.bin/webpack-dev-server --progress --inline --hot",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src"
   },
   "author": "Luciano Mammino",
   "license": "MIT",
   "dependencies": {
     "express": "^4.14.0",
-    "react": "^15.3.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
     "react-router": "^2.6.1"
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
-    "react-dom": "^15.3.0",
-    "webpack": "^1.13.1"
+    "babel-preset-react-hmre": "^1.1.1",
+    "react-hot-loader": "^1.3.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.14.1"
   }
 }
