--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Luciano Mammino",
   "license": "MIT",
   "dependencies": {
+    "babel-cli": "^6.11.4",
+    "ejs": "^2.5.1",
     "express": "^4.14.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
