--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "repository": "git@github.com:lmammino/judo-heroes.git",
   "scripts": {
     "start": "NODE_ENV=production node_modules/.bin/babel-node --presets 'react,es2015' src/server.js",
-    "start-dev": "node_modules/.bin/webpack-dev-server --progress --inline --hot",
+    "start-dev": "npm run start-dev-hmr",
+    "start-dev-single-page": "node_modules/.bin/http-server src/static",
+    "start-dev-hmr": "node_modules/.bin/webpack-dev-server --progress --inline --hot",
     "build": "NODE_ENV=production node_modules/.bin/webpack -p"
   },
   "author": "Luciano Mammino",
@@ -26,6 +28,7 @@
     "react-router": "^2.6.1"
   },
   "devDependencies": {
+    "http-server": "^0.9.0",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.1"
