--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "NODE_ENV=production node_modules/.bin/babel-node --presets 'react,es2015' src/server.js",
     "start-dev": "npm run start-dev-hmr",
     "start-dev-single-page": "node_modules/.bin/http-server src/static",
-    "start-dev-hmr": "node_modules/.bin/webpack-dev-server --progress --inline --hot",
+    "start-dev-hmr": "node_modules/.bin/webpack-dev-server --progress --inline --hot --open",
     "build": "NODE_ENV=production node_modules/.bin/webpack -p"
   },
   "author": "Luciano Mammino",
