--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "src/server.js",
   "repository": "git@github.com:lmammino/judo-heroes.git",
   "scripts": {
-    "start": "NODE_ENV=production node_modules/.bin/babel-node --presets 'react,es2015' src/server.js",
+    "start": "cross-env NODE_ENV=production node_modules/.bin/babel-node --presets 'react,es2015' src/server.js",
     "start-dev": "npm run start-dev-hmr",
     "start-dev-single-page": "node_modules/.bin/http-server src/static",
     "start-dev-hmr": "node_modules/.bin/webpack-dev-server --progress --inline --hot --open",
-    "build": "NODE_ENV=production node_modules/.bin/webpack -p"
+    "build": "cross-env NODE_ENV=production node_modules/.bin/webpack -p"
   },
   "author": "Luciano Mammino",
   "license": "MIT",
@@ -28,6 +28,7 @@
     "react-router": "^2.6.1"
   },
   "devDependencies": {
+    "cross-env": "^3.1.4",
     "http-server": "^0.9.0",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.13.2",
