"npm start" attempted to execute the following: (#7)
> cross-env NODE_ENV=production node_modules/.bin/babel-node --presets 'react,es2015' src/server.js

which resulted in the following error:

> Error: Couldn't find preset "'react" relative to directory "judo-heroes-old\src"

Removing the single quotes around the presets option value solved the problem for me with help from the following resources:http://jamesknelson.com/writing-npm-packages-with-es6-using-the-babel-6-cli/
https://github.com/babel/babelify/issues/134

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "repository": "git@github.com:lmammino/judo-heroes.git",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node_modules/.bin/babel-node --presets 'react,es2015' src/server.js",
+    "start": "cross-env NODE_ENV=production node_modules/.bin/babel-node --presets react,es2015 src/server.js",
     "start-dev": "npm run start-dev-hmr",
     "start-dev-single-page": "node_modules/.bin/http-server src/static",
     "start-dev-hmr": "node_modules/.bin/webpack-dev-server --progress --inline --hot --open",
